firefox scrollbar fix

--- a/css/components.css
+++ b/css/components.css
@@ -202,6 +202,11 @@
 }
 
 /** Scrollable */
+.scrollable {
+    scrollbar-width: auto;
+
+}
+
 .scrollable::-webkit-scrollbar {
     width: auto;
     height: auto;
