--- a/css/reset.css
+++ b/css/reset.css
@@ -10,6 +10,7 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  scrollbar-width: none;
 }
 
 :focus,
